--- a/.github/workflows/GEN.yml
+++ b/.github/workflows/GEN.yml
@@ -1,29 +1,51 @@
-name: GENERATE APK
+name: GENERATE APK (Android 4.4)
 
 on:
-  #  push:
-  #    branches:
-  #      - main
-  #  pull_request:
   workflow_dispatch:
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+      # 🛠️ 1. 拉取代码
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
+
+      # 🛠️ 2. 设置 JDK 11（确保与 Gradle 兼容）
+      - name: Set up JDK 11
+        uses: actions/setup-java@v2
+        with:
+          distribution: 'temurin'
+          java-version: '11'
+
+      # 🛠️ 3. 设置 Android SDK（安装 API 19）
+      - name: Set up Android SDK
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y openjdk-11-jdk unzip
+          export ANDROID_HOME=$HOME/android-sdk
+          export PATH=$ANDROID_HOME/cmdline-tools/latest/bin:$ANDROID_HOME/platform-tools:$ANDROID_HOME/emulator:$PATH
+          mkdir -p $ANDROID_HOME/cmdline-tools
+          cd $ANDROID_HOME/cmdline-tools
+          curl -o sdk-tools.zip https://dl.google.com/android/repository/commandlinetools-linux-9477386_latest.zip
+          unzip sdk-tools.zip -d latest
+          yes | sdkmanager --licenses
+          sdkmanager "platforms;android-19" "build-tools;30.0.3" "platform-tools"
+
+      # 🛠️ 4. 配置 Gradle，构建 APK
       - name: Build With Gradle
         run: |
           chmod +x gradlew
-          ./gradlew assemblerelease --build-cache --parallel --daemon --warning-mode all
+          ./gradlew assembleRelease --build-cache --parallel --daemon --warning-mode all
+
+      # 🛠️ 5. 查找 APK 并准备上传
       - name: Prepare App
         run: |
           mkdir -p ${{ github.workspace }}/apk/
-          for file in `find ~ -name "*.apk" -print`; do
-            mv "$file" ${{ github.workspace }}/apk/
-          done
+          find . -name "*.apk" -exec mv {} ${{ github.workspace }}/apk/ \;
+
+      # 🛠️ 6. 上传 APK 到 GitHub Artifact
       - name: Upload App To Artifact
         uses: actions/upload-artifact@v4
         with:
